--- a/js_2/t10/done/index.html
+++ b/js_2/t10/done/index.html
@@ -12,28 +12,14 @@
 <body>
     <div id="app">
         <p>{{ message }}</p>
-        <card-product
-            v-for="item in products"
-            v-bind:todo="item"
-            v-bind:key="item.id"
-        ></card-product>
-    </div>
 
-    <div class="card" style="width: 18rem;">
-        <img 
-            src="https://cdn.comfy.ua/media/catalog/product/a/p/apple_iphone_11_64gb_black_0_3.jpg" 
-            class="card-img-top" 
-            alt="..."
-            style="max-height: 300px; width: fit-content;margin: 0 auto;">
-        <div class="card-body">
-            <h5 class="card-title">Iphone 11</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <p class="d-flex justify-content-between">
-              <span>Price:</span>
-              <span>700$</span>
-            </p>
-          <a href="#" class="btn btn-primary">Add to cart</a>
+        <div class="d-flex flex-wrap">
+            <socials-component v-for="social in socials" v-bind:social="social"></socials-component>
         </div>
+        
+        <!--
+        <socials-component v-for="item in socials" v-bind:todo="item" v-bind:key="item.id"></socials-component>
+        -->
     </div>
     <script src="main.js"></script>
 </body>
