--- a/js_2/t11/done/index.html
+++ b/js_2/t11/done/index.html
@@ -6,9 +6,9 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <script src="https://unpkg.com/vue@next"></script>
-    <style>
+     <style>
         .username{
             background: navy;
             color: white;
@@ -32,35 +32,29 @@
     </head>
 <body>
     <div class="container">
-        <div class="mb-3"></div>
         <div id="app">
-            <card-product
-                v-for="item in products"
-                v-bind:todo="item"
+            <comment-commponent
+                v-for="item in comments"
+                v-bind:comment="item"
                 v-bind:key="item.id"
-            ></card-product>
+            ></comment-commponent>
         </div>
 
-        <div class="card">
+        <div class="card mb-3">
             <div class="row">
-                <div class="col-1 userlogo_box">
-                    <div class="username">
-                        R
-                    </div>
-                </div>
-                <div class="col-11">
-                    <h5>Rainer Brous</h5>
-                    <div>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima assumenda maiores odio dolorem, ratione iste possimus inventore esse soluta, autem obcaecati est impedit vel minus sit praesentium? Odit, nihil tempora.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste ut voluptates esse laborum dolorem? Ipsam explicabo quis placeat excepturi aliquam dolorem quasi beatae, quaerat sint. Sequi consequatur quasi tempora dolore.
-                        </p>
-                    </div>
-                </div>
+              <div class="col-1 userlogo_box">
+                  <div class="username">
+                      V
+                  </div>
+              </div>
+              <div class="col-11">
+                  <h5>asdsadasdds</h5>
+                  <p>
+                     asdasd
+                  </p>
+              </div>
             </div>
-        </div>
+          </div>
     </div>
     <script src="main.js"></script>
 </body>
