--- a/js_2/t11/index.html
+++ b/js_2/t11/index.html
@@ -72,25 +72,25 @@
     <h3>2. Використайте для додавання коментара темплейт. Приклад темплейту зі <a href="https://v3.vuejs.org/guide/introduction.html#composing-with-components">офіційної документаці</a></h3>
 
     <xmp>
-        <div class="card">
-            <div class="row">
-                <div class="col-1 userlogo_box">
-                    <div class="username">
+        <div class="card mb-3">
+            <div class="d-flex">
+              <div class="userlogo_box">
+                  <div class="username">
                         R
-                    </div>
-                </div>
-                <div class="col-11">
-                    <h5>Rainer Brous</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima assumenda maiores odio dolorem, 
-                        ratione iste possimus inventore esse soluta, autem obcaecati est impedit vel minus sit praesentium? 
-                        Odit, nihil tempora.
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste ut voluptates esse laborum dolorem? 
-                        Ipsam explicabo quis placeat excepturi aliquam dolorem quasi beatae, quaerat sint. Sequi consequatur quasi tempora dolore.
-                    </p>
-                </div>
+                  </div>
+              </div>
+              <div class="pl-3">
+                  <h5>Rainer Brous</h5>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima assumenda maiores odio dolorem, 
+                    ratione iste possimus inventore esse soluta, autem obcaecati est impedit vel minus sit praesentium? 
+                    Odit, nihil tempora.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste ut voluptates esse laborum dolorem? 
+                    Ipsam explicabo quis placeat excepturi aliquam dolorem quasi beatae, quaerat sint. Sequi consequatur quasi tempora dolore.
+                  </p>
+              </div>
             </div>
-        </div>
+          </div>
     </xmp>
 
     <xmp>
@@ -107,8 +107,7 @@
                 border-radius: 50%;
             }
             .userlogo_box{
-                padding-top: 10px;
-                padding-left: 20px;
+                padding: 10px 20px;
             }
             .card{
                 width: 100%;
