--- a/js_2/t11/done/index.html
+++ b/js_2/t11/done/index.html
@@ -21,8 +21,7 @@
             border-radius: 50%;
         }
         .userlogo_box{
-            padding-top: 10px;
-            padding-left: 20px;
+            padding: 10px 20px;
         }
         .card{
             width: 100%;
@@ -39,23 +38,10 @@
                 v-bind:key="item.id"
             ></comment-commponent>
         </div>
-
-        <div class="card mb-3">
-            <div class="row">
-              <div class="col-1 userlogo_box">
-                  <div class="username">
-                      V
-                  </div>
-              </div>
-              <div class="col-11">
-                  <h5>asdsadasdds</h5>
-                  <p>
-                     asdasd
-                  </p>
-              </div>
-            </div>
-          </div>
     </div>
-    <script src="main.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="../../firebase/index.js"></script>
+    <script src="main2.js"></script>
 </body>
 </html>
