--- a/js_2/t11/index.html
+++ b/js_2/t11/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript v2. T11</title>
     <style>
-        body{font-family: sans-serif;color:navy}
+        body{font-family: sans-serif;color:navy;max-width: 1000px;margin: 0 auto 150px;}
         p{font-size: 25px;}
         a,b{color: red}
 		#message{background: lime;max-width: 100%;}
@@ -18,6 +18,8 @@
 		}
         xmp{ 
             background: lightyellow;
+            max-height: 300px;
+            overflow-y: scroll;
         }
     </style>
     <link rel="icon" href="../Untitled.png">
