--- a/js_2/t9/index.html
+++ b/js_2/t9/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript v2. T9</title>
     <style>
-        body{font-family: sans-serif;color:navy}
+         body{font-family: sans-serif;color:navy;max-width: 1000px;margin: 0 auto 150px;}
         p{font-size: 25px;}
         a,b{color: red}
 		#message{background: lime;max-width: 100%;}
