--- a/js_2/t13/index.html
+++ b/js_2/t13/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript v2. T13</title>
     <style>
-        body{font-family: sans-serif;color:navy}
+         body{font-family: sans-serif;color:navy;max-width: 1000px;margin: 0 auto 150px;}
         p{font-size: 16px;}
         a,b{color: red}
 		#message{background: lime;max-width: 100%;}
@@ -18,6 +18,8 @@
 		}
         xmp{ 
             background: lightyellow;
+            max-height: 300px;
+            overflow-y: scroll;
         }
     </style>
     <link rel="icon" href="../Untitled.png">
@@ -25,7 +27,22 @@
 <body>
     <h1>Практикування vue.js №4</h1>
 
-    <h3>1. За допомогою vue.js створіть сторінку з вибором тарифного плану.</h3>
+    <h3>1. Розгляньте бібліотеку <a href="https://axios-http.com/docs/intro">axios.js</a> для того щоб зчитувати текстовий вміст файлів за допомогою JavaScript. У майбутньому створюйте ваші компоненти у окремих файлах та завантажуйте їх вміст для використаття як темплейтів у vue.js .</h3>
+
+    <p>Приклад завантаження файлу за допомогою axios:</p>
+
+    <xmp>
+        <script>
+            document.addEventListener('DOMContentLoaded', async function(){
+                let card = await axios.get("card-template.html");
+                
+                console.log(card);
+                console.log(card.data);
+            })
+        </script>
+    </xmp>
+
+    <h3>2. За допомогою vue.js створіть сторінку з вибором тарифного плану.</h3>
 
     <xmp>
         <!DOCTYPE html>
@@ -69,7 +86,7 @@
         </html>
     </xmp>
 
-    <h3>2. Використайте для вибору плану темплейт. Приклад темплейту зі <a href="https://v3.vuejs.org/guide/introduction.html#composing-with-components">офіційної документаці</a>.</h3>
+    <h3>3. Використайте для вибору плану темплейт. Приклад темплейту зі <a href="https://v3.vuejs.org/guide/introduction.html#composing-with-components">офіційної документаці</a>.</h3>
 
     <p>html для компоненти</p>
     <xmp>
@@ -103,7 +120,7 @@
                    <span>1020$</span>
                 </p>
                 <p class="d-flex justify-content-end">
-                    <a class="btn btn-primary">Замовити</a>
+                    <a class="btn btn-primary" @click="testClick()">Замовити</a>
                 </p>
             </div>
         </div>
@@ -132,22 +149,11 @@
         </style>
     </xmp>
 
-    <h3>3. У компоненті створіть метод couuntTotalPrice() який вираховуватиме остаточну вартість покупки. Приклад створення методу з офіційнох документації <a href="">тут</a></h3>
-
-    <h3>3. Збережіть верстку темплейту у окремому html-файлі та додайте його як темплейт компоненти за допомого <a href="https://axios-http.com/docs/intro">axios.js</a></h3>
-
-    <p>Приклад завантаження файлу за допомогою axios:</p>
-
-    <xmp>
-        <script>
-            document.addEventListener('DOMContentLoaded', async function(){
-                let text = await axios.get("my-template.html");
-                
-                console.log(text);
-                console.log(text.data);
-            })
-        </script>
-    </xmp>
-
+    <h3>4. У компоненті створіть метод countTotalPrice() який вираховуватиме остаточну вартість покупки.
+        <br>Приклад створення методу у компоненті:
+    </h3>
+    <h3 align="center">
+        <img src="1.png" width="600px"  alt="" >
+    </h3>
 </body>
 </html>
