--- a/js_2/t13/done/card-template.html
+++ b/js_2/t13/done/card-template.html
@@ -1,11 +1,11 @@
 <div class="card my-2">
     <div class="row">
-        <h2 class="text-center">{{product.name}}</h2>
-        <p class="d-flex justify-content-center">
+        <h5 class="text-center">{{product.name}}</h2>
+        <p class="d-flex justify-content-center mt-2">
             <img :src="product.url" alt="">
         </p>
         <p class="d-flex justify-content-between">
-            <input class="form-control" type="number">
+            <input class="form-control" type="number" v-model="product.count" @change="countTotalPrice()">
             <span> Кількість</span>
         </p>
         <p class="d-flex justify-content-between">
@@ -17,15 +17,22 @@
                 title="Choose your color">
             <label for="exampleColorInput" class="form-label">Колір</label>
         </p>
-        <p>
-            <input type="checkbox" > Передзамолення (-5%)
-        </p>
-        <p>
-            <input type="checkbox" > Швидка доставка (+10%)
+        <div class="d-flex align-items-start flex-column">
+            <p>
+                <input type="checkbox" v-model="product.preOrder" @change="countTotalPrice()"> Передзамолення (-5%) <br>
+                <small class="text-muted">Очікування 2-3 тижні</small>
+            </p>
+            <p>
+                <input type="checkbox" v-model="product.fastDelivery" @change="countTotalPrice()"> Швидка доставка (+10%)
+            </p>
+        </div>
+        <p class="d-flex justify-content-between">
+            <span>Ціна: </span>
+            <span>${{product.price}}</span>
         </p>
         <p class="d-flex justify-content-between">
-           <span>Загальна вартість: </span>
-           <span>1020$</span>
+           <span>Вартість замовлення: </span>
+           <span>${{product.totalPrice}}</span>
         </p>
         <p class="d-flex justify-content-end">
             <a class="btn btn-primary" @click="testClick()">Замовити</a>
