--- a/js_2/t13/done/index.html
+++ b/js_2/t13/done/index.html
@@ -15,13 +15,13 @@
             padding: 1rem;
         }
         .card p{
-            font-size: 20px;
+            font-size: 16px;
         }
         input[type="number"], input[type="color"]{
             width: 100px;
         }
         .card img{
-            width: 50%;
+            height: 175px;
             margin: 0 auto;
         }
     </style>
@@ -29,7 +29,7 @@
 <body>
     <div class="container">
         <div id="app">
-            <h1 class="text-center mt-2 mb-5">Замовляй оптом</h1>
+            <h1 class="text-center mt-2 mb-3">Замовляй оптом</h1>
 
             <div class="d-flex justify-content-between flex-wrap">
                 
