--- a/js_2/t14/index.html
+++ b/js_2/t14/index.html
@@ -106,7 +106,7 @@
         <img src="2.png"  alt="" >
     </h3>
 
-    <h3>2. Використайте для вибору плану темплейт. Приклад темплейту зі <a href="https://v3.vuejs.org/guide/introduction.html#composing-with-components" target="_blank">офіційної документаці</a>.</h3>
+    <h3>2. Використайте <b>Routing</b> від vuejs. Приклад зі <a href="https://vuejs.org/guide/scaling-up/routing.html#official-router" target="_blank">офіційної документаці</a>.</h3>
 
     <hr>
     <h3 align="center">Компонентa Home</h3>
