--- a/js_2/t16/done/index.html
+++ b/js_2/t16/done/index.html
@@ -37,8 +37,11 @@
                             </li>
                         </ul>
                         <ul class="navbar-nav">
-                            <li class="nav-item">
+                            <li class="nav-item" v-if="!isLogedIn">
                                 <a class="nav-link" href="#/login">Login</a>
+                            </li>
+                            <li class="nav-item" v-if="isLogedIn">
+                                <a class="nav-link" href="#/login" @click="logOut">Log out</a>
                             </li>
                         </ul>
                     </div>
