--- a/js_2/t16/index.html
+++ b/js_2/t16/index.html
@@ -94,5 +94,8 @@
         <img src="3.png"  alt="" >
         <img src="4.png"  alt="" >
     </h3>
+
+    <h3>2. Додайте <b>Log out</b> якщо юзер уже залогований. Оновлюйте відображення змін автоматично по мірі отримання інформаці.</h3>
+
 </body>
 </html>
