--- a/js_2/kursach3/index.html
+++ b/js_2/kursach3/index.html
@@ -9,7 +9,7 @@
     <script src="js/vue.global.min.js"></script>
     <script src="js/axios.min.js"></script>
 
-    <link rel="stylesheet" href="styles/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/login.css">
     <link rel="stylesheet" href="styles/addProduct.css">
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="styles/toastr.min.css" />
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 
-    <script src="js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="js/jquery.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/toastr.min.js"></script>
 
 </head>
